# Ai-video-editor

./: README.md  app.py  app.py.backup  app.py.bak  app.py.temp  iframe_example.html  packages.txt  pyproject.toml  replit.nix  requierement.txt  video_handler.py
assets/: __init__.py  styles.css
attached_assets/: Pasted--Interfaz-general-de-la-Timeline-Dise-o-modular-y-escalable-con-posibilidad-de-reorganizar-panele-1743852588033.txt  Pasted--Playground-Dashboard-Docs-API-reference-Error-codes-Explore-API-error-codes-and-solutions--1743847030362.txt  Pasted-Detalles-del-Estilo-de-Red-Creativa-Paleta-de-Colores-La-web-utiliza-una-paleta-de-colores-minimal-1743852609356.txt
ui/: __init__.py  chat_interface.py  timeline_ui.py
utils/: __init__.py  ai_integrations.py  command_processor.py  command_queue.py  gemini_integration.py  gemini_video_analyzer.py  interactive_timeline.py  simple_video.py  timeline.py  video_handler.py  video_processor.py  video_utils
